@@ -62,6 +62,22 @@ NPG run identifier
 
 Flowcell lane number
 
+=head2 last_changed
+
+  data_type: 'datetime'
+  datetime_undef_if_invalid: 1
+  default_value: 'CURRENT_TIMESTAMP'
+  is_nullable: 1
+
+Date this record was created or changed
+
+=head2 qc_seq
+
+  data_type: 'tinyint'
+  is_nullable: 1
+
+Sequencing lane level QC outcome, a result of either manual or automatic assessment by core
+
 =head2 instrument_name
 
   data_type: 'char'
@@ -243,6 +259,15 @@ __PACKAGE__->add_columns(
   { data_type => 'integer', extra => { unsigned => 1 }, is_nullable => 0 },
   'position',
   { data_type => 'smallint', extra => { unsigned => 1 }, is_nullable => 0 },
+  'last_changed',
+  {
+    data_type => 'datetime',
+    datetime_undef_if_invalid => 1,
+    default_value => 'CURRENT_TIMESTAMP',
+    is_nullable => 1,
+  },
+  'qc_seq',
+  { data_type => 'tinyint', is_nullable => 1 },
   'instrument_name',
   { data_type => 'char', is_nullable => 1, size => 32 },
   'instrument_model',
@@ -377,8 +402,8 @@ __PACKAGE__->has_many(
 );
 
 
-# Created by DBIx::Class::Schema::Loader v0.07048 @ 2018-04-13 13:42:06
-# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:txmWoUENXO0siusSx/61zg
+# Created by DBIx::Class::Schema::Loader v0.07049 @ 2018-11-29 17:12:04
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:qLBqL8wEbPwG0XOW+GS6yg
 
 our $VERSION = '0';
 
@@ -470,7 +495,7 @@ Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2015 Genome Research Limited
+Copyright (C) 2018 Genome Research Limited
 
 This file is part of the ml_warehouse package L<https://github.com/wtsi-npg/ml_warehouse>.
 
