@@ -1,6 +1,17 @@
 LIST OF CHANGES
 ---------------
 
+ - 'last_changed' columns added to both 'iseq_product_metrics' and
+   'iseq_run_lane_metrics' tables
+ - 'qc_seq' column addedto the 'iseq_run_lane_metrics' table
+ - redundant 'iseq_pm_run_index' indexed dropped from 'iseq_product_metrics'
+   table
+ - changes to enable saving results for merged entities to'iseq_product_metrics':
+     NOT NULL constraint dropped from 'id_run' and 'position' columns;
+     nullable 'id_iseq_product' column added to save composition digest;
+     nullable 'iseq_composition_tmp' added to save a short form of composition
+     JSON, needed because we do not have the linking table yet.
+
 release 2.11
  - added metric column to iseq_product_metrics for RNA: MT expression in pct of TPM.
  - add target fields to iseq_product_metrics
